<?xml version="1.0" encoding="utf-8"?>
<!-- Armenian Phonetic QWERTY Keyboard Layout -->
<Keyboard android:keyWidth="@dimen/key_width" android:keyHeight="@dimen/key_height" android:horizontalGap="@dimen/keyboard_horizontal_gap" android:verticalGap="@dimen/keyboard_vertical_gap"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Row android:rowEdgeFlags="top">
        <Key android:codes="49" android:popupKeyboard="@xml/shift_1" android:keyEdgeFlags="left" android:keyLabel="է" />
        <Key android:codes="50" android:popupKeyboard="@xml/shift_2" android:keyLabel="թ" />
        <Key android:codes="51" android:popupKeyboard="@xml/shift_3" android:keyLabel="փ" />
        <Key android:codes="52" android:popupKeyboard="@xml/shift_4" android:keyLabel="ձ" />
        <Key android:codes="53" android:popupKeyboard="@xml/shift_5" android:keyLabel="ջ" />
        <Key android:codes="54" android:popupKeyboard="@xml/shift_6" android:keyLabel="ւ" />
        <Key android:codes="55" android:popupKeyboard="@xml/shift_7" android:keyLabel="և" />
        <Key android:codes="56" android:popupKeyboard="@xml/shift_8" android:keyLabel="ր" />
        <Key android:codes="57" android:popupKeyboard="@xml/shift_9" android:keyLabel="չ" />
        <Key android:codes="48" android:popupKeyboard="@xml/shift_0" android:keyLabel="ճ" />
        <Key android:codes="-5" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_delete" android:keyIcon="@drawable/ic_ime_delete" />
    </Row>
    <Row>
        <Key android:keyLabel="ք" android:keyEdgeFlags="left" />
        <Key android:keyLabel="ո" />
        <Key android:keyLabel="ե" />
        <Key android:keyLabel="ռ" />
        <Key android:keyLabel="տ" />
        <Key android:keyLabel="ը" />
        <Key android:codes="1400,1410" android:keyLabel="ու" />
        <Key android:keyLabel="ի" />
        <Key android:keyLabel="օ" />
        <Key android:keyLabel="պ" />
        <Key android:keyLabel="խ" android:keyEdgeFlags="right" />
    </Row>
    <Row>
        <Key android:keyLabel="ա" android:keyEdgeFlags="left" />
        <Key android:keyLabel="ս" />
        <Key android:keyLabel="դ" />
        <Key android:keyLabel="ֆ" />
        <Key android:keyLabel="գ" />
        <Key android:keyLabel="հ" />
        <Key android:keyLabel="յ" />
        <Key android:keyLabel="կ" />
        <Key android:keyLabel="լ" />
        <Key android:keyLabel="շ" />
        <Key android:keyLabel="ծ" android:keyEdgeFlags="right" />
    </Row>
    <Row>
        <Key android:keyLabel="զ" android:keyEdgeFlags="left" />
        <Key android:keyLabel="ղ" />
        <Key android:keyLabel="ց" />
        <Key android:keyLabel="վ" />
        <Key android:keyLabel="բ" />
        <Key android:keyLabel="ն" />
        <Key android:keyLabel="մ" />
        <Key android:keyLabel="ժ" />
        <Key android:codes="46" android:keyLabel="." />
        <Key android:codes="45" android:keyLabel="-" />
        <Key android:codes="-10" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_clipboard" android:keyIcon="@drawable/ic_ime_clipboard" />
    </Row>
    <Row android:rowEdgeFlags="bottom">
        <Key android:codes="-2" android:keyEdgeFlags="left" android:keyLabel="@string/keyboardview_keycode_mode_change" android:keyIcon="@drawable/ic_ime_symbols" />
        <Key android:codes="-1" android:keyLabel="@string/keyboardview_keycode_shift" android:keyIcon="@drawable/ic_ime_shift_off" />
        <Key android:codes="-9" android:keyLabel="@string/keyboardview_keycode_lang" android:keyIcon="@drawable/ic_ime_world" />
        <Key android:codes="32" android:keyLabel="@string/keyboardview_keycode_space" android:keyIcon="@drawable/ic_ime_space" android:keyWidth="@dimen/space_key_width" />
        <Key android:codes="-7" android:keyLabel="@string/keyboardview_keycode_voice" android:keyIcon="@drawable/ic_ime_voice" />
        <Key android:codes="-3" android:keyLabel="@string/keyboardview_keycode_left" android:keyIcon="@drawable/ic_ime_left_arrow" />
        <Key android:codes="-4" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_right" android:keyIcon="@drawable/ic_ime_right_arrow" />
    </Row>
</Keyboard>
