<?xml version="1.0" encoding="utf-8"?>
<Keyboard android:keyWidth="@dimen/key_width" android:keyHeight="@dimen/key_height" android:horizontalGap="@dimen/keyboard_horizontal_gap" android:verticalGap="@dimen/keyboard_vertical_gap"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Row android:rowEdgeFlags="top">
        <Key android:codes="49" android:popupKeyboard="@xml/shift_1" android:keyEdgeFlags="left" android:keyLabel="1" />
        <Key android:codes="50" android:popupKeyboard="@xml/shift_2" android:keyLabel="2" />
        <Key android:codes="51" android:popupKeyboard="@xml/shift_3" android:keyLabel="3" />
        <Key android:codes="52" android:popupKeyboard="@xml/shift_4" android:keyLabel="4" />
        <Key android:codes="53" android:popupKeyboard="@xml/shift_5" android:keyLabel="5" />
        <Key android:codes="54" android:popupKeyboard="@xml/shift_6" android:keyLabel="6" />
        <Key android:codes="55" android:popupKeyboard="@xml/shift_7" android:keyLabel="7" />
        <Key android:codes="56" android:popupKeyboard="@xml/shift_8" android:keyLabel="8" />
        <Key android:codes="57" android:popupKeyboard="@xml/shift_9" android:keyLabel="9" />
        <Key android:codes="48" android:popupKeyboard="@xml/shift_0" android:keyLabel="0" />
        <Key android:codes="-5" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_delete" android:keyIcon="@drawable/ic_ime_delete" />
    </Row>
    <Row>
        <Key android:popupKeyboard="@xml/shift_q" android:keyLabel="ㅃ" android:keyEdgeFlags="left" />
        <Key android:popupKeyboard="@xml/shift_w" android:keyLabel="ㅉ" />
        <Key android:popupKeyboard="@xml/shift_e" android:keyLabel="ㄸ" />
        <Key android:popupKeyboard="@xml/shift_r" android:keyLabel="ㄲ" />
        <Key android:popupKeyboard="@xml/shift_t" android:keyLabel="ㅆ" />
        <Key android:popupKeyboard="" android:keyLabel="" />
        <Key android:popupKeyboard="" android:keyLabel="" />
        <Key android:popupKeyboard="" android:keyLabel="" />
        <Key android:popupKeyboard="" android:keyLabel="" />
        <Key android:popupKeyboard="@xml/shift_o" android:keyLabel="ㅒ" />
        <Key android:keyEdgeFlags="@xml/shift_p" android:keyLabel="ㅖ" android:keyEdgeFlags="right" />
    </Row>
    <Row>
        <Key android:keyLabel="ㅂ" android:keyEdgeFlags="left" />
        <Key android:keyLabel="ㅈ" />
        <Key android:keyLabel="ㄷ" />
        <Key android:keyLabel="ㄱ" />
        <Key android:keyLabel="ㅅ" />
        <Key android:keyLabel="ㅛ" />
        <Key android:keyLabel="ㅕ" />
        <Key android:keyLabel="ㅑ" />
        <Key android:keyLabel="ㅐ" />
	<Key android:keyLabel="ㅔ" />
        <Key android:keyLabel="[" />
        <Key android:keyLabel="]" android:keyEdgeFlags="right" />
    </Row>
    <Row>
        <Key android:keyLabel="ㅁ" android:keyEdgeFlags="left" />
        <Key android:keyLabel="ㄴ" />
        <Key android:keyLabel="ㅇ" />
        <Key android:keyLabel="ㄹ" />
        <Key android:keyLabel="ㅎ" />
        <Key android:keyLabel="ㅗ" />
        <Key android:keyLabel="ㅓ" />
	<Key android:keyLabel="ㅏ" />
	<Key android:keyLabel="ㅣ" />
        <Key android:keyLabel="" android:keyEdgeFlags="right" />
    </Row>
    <Row>
        <Key android:keyLabel="ㅋ" android:keyEdgeFlags="left" />
        <Key android:keyLabel="ㅌ" />
        <Key android:keyLabel="ㅊ" />
        <Key android:keyLabel="ㅍ" />
        <Key android:keyLabel="ㅠ" />
        <Key android:keyLabel="ㅜ" />
        <Key android:keyLabel="ㅡ" />
        <Key android:keyLabel="," />
	<Key android:keyLabel="." />
	<Key android:codes="/" />
        <Key android:keyLabel="" android:keyEdgeFlags="right" />
    </Row>	
    <Row android:rowEdgeFlags="bottom">
        <Key android:codes="-2" android:keyEdgeFlags="left" android:keyLabel="@string/keyboardview_keycode_mode_change" android:keyIcon="@drawable/ic_ime_symbols" />
        <Key android:codes="-1" android:keyLabel="@string/keyboardview_keycode_shift" android:keyIcon="@drawable/ic_ime_shift_off" />
        <Key android:codes="-9" android:keyLabel="@string/keyboardview_keycode_lang" android:keyIcon="@drawable/ic_ime_world" />
        <Key android:codes="32" android:keyLabel="@string/keyboardview_keycode_space" android:keyIcon="@drawable/ic_ime_space" android:keyWidth="@dimen/space_key_width" />
        <Key android:codes="-7" android:keyLabel="@string/keyboardview_keycode_voice" android:keyIcon="@drawable/ic_ime_voice" android:popupKeyboard="@xml/accent_voice" />
        <Key android:codes="-3" android:keyLabel="@string/keyboardview_keycode_left" android:keyIcon="@drawable/ic_ime_left_arrow" />
        <Key android:codes="-4" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_right" android:keyIcon="@drawable/ic_ime_right_arrow" />
    </Row>
</Keyboard>
