<?xml version="1.0" encoding="utf-8"?>
<Keyboard android:keyWidth="@dimen/key_width" android:keyHeight="@dimen/key_height" android:horizontalGap="@dimen/keyboard_horizontal_gap" android:verticalGap="@dimen/keyboard_vertical_gap"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Key codes: https://en.wikipedia.org/wiki/Arabic_(Unicode_block) -->
    <Row android:rowEdgeFlags="top">
        <Key android:codes="49" android:popupKeyboard="@xml/shift_1" android:keyEdgeFlags="left" android:keyLabel="1" />
        <Key android:codes="50" android:popupKeyboard="@xml/shift_2" android:keyLabel="2" />
        <Key android:codes="51" android:popupKeyboard="@xml/shift_3" android:keyLabel="3" />
        <Key android:codes="52" android:popupKeyboard="@xml/shift_4" android:keyLabel="4" />
        <Key android:codes="53" android:popupKeyboard="@xml/shift_5" android:keyLabel="5" />
        <Key android:codes="54" android:popupKeyboard="@xml/shift_6" android:keyLabel="6" />
        <Key android:codes="55" android:popupKeyboard="@xml/shift_7" android:keyLabel="7" />
        <Key android:codes="56" android:popupKeyboard="@xml/shift_8" android:keyLabel="8" />
        <Key android:codes="57" android:popupKeyboard="@xml/shift_9" android:keyLabel="9" />
        <Key android:codes="48" android:popupKeyboard="@xml/shift_0" android:keyLabel="0" />
        <Key android:codes="-5" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_delete" android:keyIcon="@drawable/ic_ime_delete" />
    </Row>
    <Row>
        <Key android:codes="1590" android:keyLabel="ض" android:keyEdgeFlags="left" />
        <Key android:codes="1589" android:keyLabel="ص" />
        <Key android:codes="1602" android:keyLabel="ق" />
        <Key android:codes="1609" android:keyLabel="ى" android:popupKeyboard="@xml/accent_r" />
        <Key android:codes="1601" android:keyLabel="ف" />
        <Key android:codes="1594" android:keyLabel="غ" />
        <Key android:codes="1593" android:keyLabel="ع" />
        <Key android:codes="1607" android:keyLabel="ه" />
        <Key android:codes="1582" android:keyLabel="خ" />
        <Key android:codes="1581" android:keyLabel="ح" />
        <Key android:codes="1580" android:keyLabel="ج" android:keyEdgeFlags="right" />
    </Row>
    <Row>
        <Key android:codes="1588" android:keyEdgeFlags="left" android:keyLabel="ش" />
        <Key android:codes="1587" android:keyLabel="س" />
        <Key android:codes="1610" android:keyLabel="ي" />
        <Key android:codes="1576" android:keyLabel="ب" />
        <Key android:codes="1604" android:keyLabel="ل" />
        <Key android:codes="1569" android:keyLabel="ء" />
        <Key android:codes="1575" android:keyLabel="ا" />
        <Key android:codes="1578" android:keyLabel="ت" />
        <Key android:codes="1606" android:keyLabel="ن" />
        <Key android:codes="1605" android:keyLabel="م" />
        <Key android:codes="1603" android:keyEdgeFlags="right" android:keyLabel="ك" />
    </Row>
    <Row>
        <Key android:codes="1592" android:keyLabel="ظ" android:keyEdgeFlags="left" />
        <Key android:codes="1591" android:keyLabel="ط" />
        <Key android:codes="1584" android:keyLabel="ذ" />
        <Key android:codes="1583" android:keyLabel="د" />
        <Key android:codes="1586" android:keyLabel="ز" />
        <Key android:codes="1585" android:keyLabel="ر" />
        <Key android:codes="1572" android:keyLabel="ؤ" />
        <Key android:codes="1608" android:keyLabel="و" />
        <Key android:codes="1577" android:keyLabel="ة" />
        <Key android:codes="1579" android:keyLabel="ث" />
        <Key android:codes="1574" android:keyLabel="ئ" android:keyEdgeFlags="right" android:popupKeyboard="@xml/accent_qm" />
    </Row>
    <Row android:rowEdgeFlags="bottom">
        <Key android:codes="-2" android:keyEdgeFlags="left" android:keyLabel="@string/keyboardview_keycode_mode_change" android:keyIcon="@drawable/ic_ime_symbols" />
        <Key android:codes="-1" android:keyLabel="@string/keyboardview_keycode_shift" android:keyIcon="@drawable/ic_ime_shift_off" />
        <Key android:codes="-9" android:keyLabel="@string/keyboardview_keycode_lang" android:keyIcon="@drawable/ic_ime_world" />
        <Key android:keyWidth="@dimen/space_key_width" android:codes="32" android:keyLabel="@string/keyboardview_keycode_space" android:keyIcon="@drawable/ic_ime_space_ar" />
        <Key android:codes="-7" android:keyLabel="@string/keyboardview_keycode_voice" android:keyIcon="@drawable/ic_ime_voice" />
        <Key android:codes="-3" android:keyLabel="@string/keyboardview_keycode_left" android:keyIcon="@drawable/ic_ime_left_arrow" />
        <Key android:codes="-4" android:keyEdgeFlags="right" android:keyLabel="@string/keyboardview_keycode_right" android:keyIcon="@drawable/ic_ime_right_arrow" />
    </Row>
</Keyboard>